# kiroku

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  data.rs  errors.rs  events.rs  lib.rs  main.rs  ops.rs  ui.rs
tests/: folder_support.rs  integration_tests.rs
