[package]
name = "kiroku"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
walkdir = "2.5.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
tui-logger = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify = "8.0.0"
fuzzy-matcher = "0.3.7"
