[package]
name = "kiroku-tui"
version = "0.1.8"
edition = "2024"
description = "A simple, terminal-based personal journaling and note-taking tool."
repository = "https://github.com/gab-dev-7/kiroku"
license = "MIT"
readme = "README.md"
keywords = ["tui", "journal", "notes", "cli", "productivity"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "kiroku"
path = "src/main.rs"

[dependencies]
chrono = "0.4.43"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
walkdir = "2.5.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
tui-logger = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify = "8.0.0"
fuzzy-matcher = "0.3.7"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.24.0"
